--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
